--- a/TwoBoxes/Vagrantfile
+++ b/TwoBoxes/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure(2) do |config|
 	config.vm.define "worker1" do |worker|
 	worker.vm.allow_hosts_modification = true
 	worker.vm.hostname = "box1"
-	worker.vm.box = "ubuntu/trusty64"
+	worker.vm.box = "hashicorp/bionic64"
 		worker.vm.network "private_network", ip: "10.0.3.6",
 		   virtualbox__intnet: "Network1"
 		worker.vm.provision "shell", path: "../scripts/install.sh"
@@ -19,8 +19,7 @@ Vagrant.configure(2) do |config|
 	config.vm.define "worker2" do |worker|
 	    worker.vm.allow_hosts_modification = true
 	    worker.vm.hostname = "box2"
-		worker.vm.box = "ubuntu/trusty64"
-		#worker.vm.box = "hashicorp/bionic64"
+		worker.vm.box = "hashicorp/bionic64"
 		worker.vm.network "private_network", ip: "10.0.3.7",
 		   virtualbox__intnet: "Network1"
 		worker.vm.provision "shell", path: "../scripts/install.sh"
