--- a/OneBox/Vagrantfile
+++ b/OneBox/Vagrantfile
@@ -1,13 +1,13 @@
 Vagrant.configure(2) do |config|
-	config.vm.define "devops-box" do |devbox|
-		devbox.vm.box = "hashicorp/bionic64"
-    		#devbox.vm.network "private_network", ip: "192.168.199.9"
-    		#devbox.vm.hostname = "devops-box"
-      		devbox.vm.provision "shell", path: "scripts/install.sh"
-    		devbox.vm.provider "virtualbox" do |v|
-		  v.name = "devbox"
-    		  v.memory = 1024
-    		  v.cpus = 1
-    		end
-	end
-end
+	config.vm.define "controller" do |worker|
+	worker.vm.allow_hosts_modification = true
+	worker.vm.hostname = "controller"
+	worker.vm.box = "hashicorp/bionic64"
+		worker.vm.network "private_network", ip: "10.0.3.10",
+		   virtualbox__intnet: "Network1"
+		worker.vm.provision "shell", path: "../scripts/install.sh"
+		worker.vm.provider "virtualbox" do |v|
+		  v.name = "worker1"
+		  v.memory = 1024
+		  v.cpus = 1
+		end
