--- a/kubernetes/ingressing_with_k3s-master/mysite.yaml
+++ b/kubernetes/ingressing_with_k3s-master/mysite.yaml
@@ -44,6 +44,7 @@ metadata:
   name: mysite-nginx-ingress
   annotations:
     kubernetes.io/ingress.class: "traefik"
+    traefik.frontend.rule.type: PathPrefixStrip
 spec:
   rules:
   - http:
