--- a/kubernetes/ingressing_with_k3s-master/mysite.yaml
+++ b/kubernetes/ingressing_with_k3s-master/mysite.yaml
@@ -49,7 +49,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /nginx
         backend:
           serviceName: mysite-nginx-service
           servicePort: 80
