--- a/vagrant/OneBox/Vagrantfile
+++ b/vagrant/OneBox/Vagrantfile
@@ -2,7 +2,7 @@ Vagrant.configure(2) do |config|
 	config.vm.define "controller" do |worker|
 	worker.vm.allow_hosts_modification = true
 	worker.vm.hostname = "controller"
-	worker.vm.box = "hashicorp/bionic64"
+	worker.vm.box = "bionic64"
 		worker.vm.network "private_network", ip: "10.0.3.10",
 		   virtualbox__intnet: "Network1"
 		worker.vm.provision "shell", path: "../scripts/install.sh"
