--- a/vagrant/hostonly/Vagrantfile
+++ b/vagrant/hostonly/Vagrantfile
@@ -1,15 +1,32 @@
 Vagrant.configure(2) do |config|
-	config.vm.define "controller" do |worker|
+	config.vm.define "worker1" do |worker|
 	worker.vm.allow_hosts_modification = true
-	worker.vm.hostname = "controller"
+	worker.vm.hostname = "box1"
 	worker.vm.box = "bionic64"
-		worker.vm.network "private_network", ip: "192.168.83.10",
-		   name: "VirtualBox Host-Only Ethernet Adapter"
+	worker.vm.network "private_network", ip: "192.168.83.10",
+		name: "VirtualBox Host-Only Ethernet Adapter"
 		worker.vm.provision "shell", path: "../scripts/install.sh"
 		worker.vm.provider "virtualbox" do |v|
-		  v.name = "controller"
+		  v.name = "worker1"
 		  v.memory = 1024
 		  v.cpus = 1
 		end
-    end
+	end
+	#
+	# config.vm.network "forwarded_port", guest: 80, host: 8080
+	#       https://www.vagrantup.com/docs/networking/forwarded_ports
+	#
+	config.vm.define "worker2" do |worker|
+	    worker.vm.allow_hosts_modification = true
+	    worker.vm.hostname = "box2"
+		worker.vm.box = "bionic64"
+		worker.vm.network "private_network", ip: "192.168.83.11",
+		name: "VirtualBox Host-Only Ethernet Adapter"
+		worker.vm.provision "shell", path: "../scripts/install.sh"
+		worker.vm.provider "virtualbox" do |v|
+		  v.name = "worker2"
+		  v.memory = 1024
+		  v.cpus = 1
+		end
+	end
 end
