--- a/quizz/config.yml
+++ b/quizz/config.yml
@@ -1,3 +1,3 @@
-uri: http://quizz.cossme.pw
-user: omerlin@gmail.com
+uri: http://quizz.nilrem.org:5000
+user: xxxxxx@isen.yncrea.fr
 category: kubernetes
